Simplify BlueBubbles client string checks